Details
-
Bug
-
Resolution: Fixed
-
Major
-
XQEMU (Xbox emulator)
Description
There is VIDEO_DRIVER_INIT_FAILURE bugcheck with status STATUS_OBJECT_NAME_NOT_FOUND, but the xboxvmp.sys video miniport driver is installed and loaded.
It used to work before many years ago, but now it's regressed. Debug log attached.
Attachments
Issue Links
- blocks
-
CORE-16352 USB input doesn't work in XQEMU/xemu and on real Xbox
-
- Open
-
- relates to
-
CORE-14151 ReactOS will not boot after installing Nvidia 182.05 or newer driver
-
- Untriaged
-
-
CORE-17600 AGP bridge does not have Xbox GPU as children device on real hardware
-
- Resolved
-